test/syntax/fail/not_combinatorial/fun_init_pre.sync
let f x = 0 -> pre x
